# geoip2cn

./: .copilot-commit-message-instructions.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  ipinfo_lite.py  logging_config.py  main.py  models.py  nftables.conf  pyproject.toml  settings.py  taplo.toml  utils.py
.github/workflows/: geoip2cn.yaml  render-nftables.yaml
aggregated/: ipv4.zone  ipv6.zone
asn/ipv4/: AS133774.zone  AS4134.zone  AS4811.zone  AS4847.zone  AS63199.zone
asn/ipv6/: AS133774.zone  AS4134.zone  AS4811.zone  AS4847.zone  AS63199.zone
domains/ipv4/: 10086.cn.zone  189.cn.zone  360.cn.zone  360.net.zone  aggregated.zone  alibabacloud.com.zone  alibabagroup.com.zone  baidu.com.zone  chinamobile.com.zone  chinatelecom.cn.zone  chinaunicom.cn.zone  ct1000.com.zone  huawei.com.zone  huaweicloud.com.zone  tencent.com.zone  volcengine.com.zone
domains/ipv6/: 10086.cn.zone  189.cn.zone  360.cn.zone  aggregated.zone  alibabacloud.com.zone  alibabagroup.com.zone  baidu.com.zone  chinamobile.com.zone  chinatelecom.cn.zone  chinaunicom.cn.zone  ct1000.com.zone  huaweicloud.com.zone  tencent.com.zone  volcengine.com.zone
providers/: __init__.py  base.py  ip2region_xdb.py  ipinfo_lite.py  maxmind_city.py
renderers/: nftables.py
rules/: __init__.py  asn_blacklist.py  city_whitelist.py
services/: extractors.py  pipeline.py
templates/: nftables.conf
tests/: conftest.py  test_ip2region_xdb.py  test_logging_config.py  test_pipeline.py  test_safe_requests.py  test_utils.py
