[project]
name = "geoip2city"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "Jinja2>=3.1.6",
  "maxminddb>=2.8.2",
  "pydantic-settings>=2.10.1",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "isort[colors]>=6.0.1",
  "mypy>=2.1.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "ruff>=0.12.8",
  "types-requests>=2.32.4.20250611",
]

[tool.black]
line-length = 120
target-version = ["py312"]
#skip-string-normalization = true

[tool.isort]
profile = "black"
force_grid_wrap = 2
combine_as_imports = true
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
extend-select = ["TC010"]
ignore = [
  # line-too-long (handled by formatter)
  "E501",
]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
exclude_gitignore = true
python_version = "3.12"
strict = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
